--- a/plant_disease_detection/templates/potato_disease_detection.html
+++ b/plant_disease_detection/templates/potato_disease_detection.html
@@ -22,7 +22,8 @@
             display: flex;
             justify-content: center;
             align-items: center;
-            font-family: 'Arial', sans-serif;
+            font-family: 'Raleway', sans-serif;
+
         }
 
         .container {
@@ -148,11 +149,54 @@
             background-color: #45a049;
             transform: scale(1.1);
         }
+        /* Header Styles */
+        .header {
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            background: rgba(22, 160, 133, 0.8); /* Transparent background */
+            padding: 20px 40px;
+            z-index: 1000;
+            display: flex;
+            align-items: center;
+            justify-content: space-between;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
+            backdrop-filter: blur(10px); /* Glass effect */
+        }
+        
+        .header-content {
+            display: flex;
+            align-items: center;
+        }
+        
+        .header-image {
+            width: 4em; /* Size of the image to match the icon */
+            height: 4em; /* Size of the image to match the icon */
+            margin-right: 10px;
+        }
+        
+        .site-title {
+            font-size: 2.5em;
+            font-family: 'Raleway', sans-serif;
+
+            color: white;
+            margin: 0;
+            text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.3);
+            font-weight: normal;
+        }
     </style>
 </head>
 <body>
-    <header>
-        <!-- Optionally add header content here -->
+    <header class="header">
+        <div class="header-content">
+            <!-- Replace icon with image -->
+            <img src="{{ url_for('static', filename='images/HEADER.png') }}" alt="Logo" class="header-image">
+            <h1 class="site-title">AgroNourish</h1>
+        </div>
+        <nav class="nav">
+            <!-- Navigation links can be added here -->
+        </nav>
     </header>
     <div class="container">
         <div class="left-container">
